play and download

--- a/songs.html
+++ b/songs.html
@@ -60,54 +60,69 @@
 
         <div class="song1">
            <p>Kanjedza-Into</p>
-           <button onclick="downloadSong()">MP3 Download</button>
-            <audio id="myAudioPlayer" controls>
+            <audio controls>
         <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Kanjedza(Intro).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+            <p>Reel</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Reel.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+           <p>Damn</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Damn.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+            <p>Drumlord4</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Drumlord4.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-           <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+           <p>Evil Tears</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Evil%20Tears.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+            <p>Metro7</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Metro7.mp3%20by%20Autra.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+           <p>Softs</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Softs.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div class="song1">
-            <p>Song Name</p>
-           <button>MP3 Download</button>
-           <button>Play</button>
+            <p>Youtra8</p>
+            <audio controls>
+        <source src="https://github.com/AUTRACHRIS-TAO/AutraBeats/raw/refs/heads/main/Youtra8.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
+
+        
     </div>
 <script src="script.js"></script>
 </body>
