--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="features">
 
             <a href="index.html">Home</a>
-            <button id="cont">Contact</button>
-            <button>About</button>
+            <a href="">Contact</a>
+            <a href="">About</a>
 
         </div>
 
