--- a/index.html
+++ b/index.html
@@ -24,13 +24,8 @@
         <div class="free">
 
             <ul>
-                <li><a href="">FreeBeats</a>
+                <li><a href="songs.html">FreeBeats</a>
                 
-                    <ul class="dropdown">
-                        <li><a href="songs.html">All</a></li>
-                        <li><a href="">Trap</a></li>
-                        <li><a href="">Dancehall</a></li>
-                    </ul>
                 </li>
             </ul>
     
