--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeatsStoreAutra</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
 
@@ -17,14 +17,14 @@
         <div class="title">
 
             <P>
-                <a href="index.html"><span class="high">B</span>eats<span class="high">S</span>tore</a>
+                <a href="/public/index.html"><span class="high">B</span>eats<span class="high">S</span>tore</a>
             </P>
         </div>
 
         <div class="free">
 
             <ul>
-                <li><a href="songs.html">FreeBeats</a>
+                <li><a href="/public/songs.html">FreeBeats</a>
                 
                 </li>
             </ul>
@@ -33,7 +33,7 @@
 
         <div class="features">
 
-            <a href="index.html">Home</a>
+            <a href="/public/index.html">Home</a>
             <a href="">Contact</a>
             <a href="">About</a>
 
@@ -86,18 +86,18 @@
 
         <div class="socials">
             <a href="https://web.facebook.com/chrispin.phiri.18400">
-           <img src="fb.jpg" alt="">
+           <img src="/assets/fb.jpg" alt="">
             </a>
             <a href="">
-           <img src="twitterx.jpg" alt="">
-            </a>
-
-            <a href="">
-           <img src="wap.png" alt="">
+           <img src="/assets/twitterx.jpg" alt="">
             </a>
 
             <a href="">
-           <img src="insta.jpg" alt="">
+           <img src="/assets/wap.png" alt="">
+            </a>
+
+            <a href="">
+           <img src="/assets/insta.jpg" alt="">
             </a>
         </div>
     </div>
